--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>🎈 piku resume 🎈</title>
+
+<style media="screen">
+  body{
+background-color: #EAF6F6;
+
+  }
+</style>
+
 </head>
 
 <body>
@@ -106,7 +114,7 @@
   <hr size="2" noshade>
   <h2>SKILLS</h2>
 
-  <table cellspacing="5" border="1">
+  <table cellspacing="1.2" border="1">
     <tr>
       <th>Languages</th>
       <th>Computer Skills</th>
