--- a/index.html
+++ b/index.html
@@ -1,36 +1,34 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
   <title>🎈 piku resume 🎈</title>
-
-<style media="screen">
-  body{
-background-color: #EAF6F6;
-
-  }
-</style>
-
+<link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Oswald:wght@600&family=Pangolin&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-  <h1>PRAVEENKUMAR ELANGOVAN</h1>
-
+  <img src="circle-cropped.png" class="smallpic" alt="piku" width="30" height="30"></td>
+<hr>
+  <h1 class="praveenName">PRAVEENKUMAR ELANGOVAN</h1>
+<hr>
   <table cellspacing="40">
     <tr>
       <td> <img src="circle-cropped.png" alt="piku" width="230" height="230"></td>
       <td>
         <h2>PERSONAL INFORMATION</h2>
-        <hr size="1" noshade>
+        <hr size="2" noshade>
+
         <p>Date of birth: 04/11/1996 <br />Nationality: India<br />Address: Fursungi, Pune 412308, India<br />Phone number: +918124447027<br />Email address: praveen366188@gmail.com</p>
         <hr size="2" noshade>
+
       </td>
     </tr>
   </table>
   <h2>PROFILE</h2>
-  <hr size="1" noshade>
+  <hr size="2" noshade>
+
   <ul>
     <li>Having 1 yr 10 mos of experience as an Automation Test Engineer</li>
     <li>Specializing in automating Web application using selenium & Cucumber with java and API Automation using
@@ -101,9 +99,7 @@ background-color: #EAF6F6;
 
 
   </table>
-
   <!--<h3><a href="myHobbies.html">Hobbies</a></h3>-->
-
   <h2>HOBBIES</h2>
   <hr size="1" noshade>
   <ul>
@@ -210,12 +206,14 @@ background-color: #EAF6F6;
 
     </tr>
   </table>
+  <br>
 
 
   <hr size="2" noshade>
-  <h3>Wanna contact me?</h3>
+  <h2>Wanna contact me?</h2>
   <a href="contactme.html">click here</a>
-
+<br>
+<br>
   <hr size="2" noshade>
 </body>
 
