--- a/myHobbies.html
+++ b/myHobbies.html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-  </head>
+    <title>Hobbies</title>
+    <link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Oswald:wght@600&family=Pangolin&display=swap" rel="stylesheet">  </head>
   <body>
     <h1>Hobbies</h1>
     <ol>
