--- a/contactme.html
+++ b/contactme.html
@@ -43,7 +43,7 @@
         </td>
       </tr>
       <tr>
-        <td><label for="name">Like to interview me??Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem?</label>
+        <td><label for="name">Like to interview me?</label>
         </td>
         <td><input type="radio" name="yesOrNo" value="YesNo"><br>
         </td>
